--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,135 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
+  background-color: #ddfff7;
+  z-index: 1;
+  position: relative;
+  /* overflow: hidden; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+i:hover {
+  color: rgba(112, 156, 194, 0.694);
+}
+
+.session-div {
+  border: 1px solid black;
+  border-radius: 30%;
+  border-width: 5px;
+  padding: 80px;
+  border-color: rgba(112, 156, 194, 0.694);
+}
+
+.box2 {
+  width: 300px;
+  height: 200px;
+  background-color: #ddfff7;
+  position: relative;
+  box-shadow: 10px 10px 42px 0 rgba(0, 0, 0, 0.75);
+}
+.box2:after,
+.box2:before {
+  mix-blend-mode: multiply;
+  filter: none;
+  z-index: -1;
+  content: "";
+  width: calc(0% + (50px * 2));
+  height: calc(0% + (50px * 2));
+  position: absolute;
+  display: block;
+  /* animation: border 10s ease-in-out infinite; */
+  transform: translateX(50px) translateY(-200px);
+}
+
+.box-active {
+  width: 300px;
+  height: 200px;
+  background-color: #ddfff7;
+  position: relative;
+  box-shadow: 10px 10px 42px 0 rgba(0, 0, 0, 0.75);
+}
+.box-active:after,
+.box-active:before {
+  mix-blend-mode: multiply;
+  filter: none;
+  z-index: -1;
+  content: "";
+  width: calc(100% + (50px * 2));
+  height: calc(100% + (50px * 2));
+  position: absolute;
+  display: block;
+  animation: border 15s ease-in-out infinite;
+  transform: translateX(-50px) translateY(-50px);
+}
+@keyframes border {
+  0%,
+  100% {
+    -webkit-clip-path: polygon(
+      0 0,
+      calc(100% - (33.3333333333px)) calc(0% + (33.3333333333px)),
+      100% 100%,
+      calc(0% + (33.3333333333px)) calc(100% - (33.3333333333px))
+    );
+    clip-path: polygon(
+      0 0,
+      calc(100% - (33.3333333333px)) calc(0% + (33.3333333333px)),
+      100% 100%,
+      calc(0% + (33.3333333333px)) calc(100% - (33.3333333333px))
+    );
+  }
+  50% {
+    -webkit-clip-path: polygon(
+      calc(0% + (33.3333333333px)) calc(0% + (33.3333333333px)),
+      100% 0,
+      calc(100% - (33.3333333333px)) calc(100% - (33.3333333333px)),
+      0 100%
+    );
+    clip-path: polygon(
+      calc(0% + (33.3333333333px)) calc(0% + (33.3333333333px)),
+      100% 0,
+      calc(100% - (33.3333333333px)) calc(100% - (33.3333333333px)),
+      0 100%
+    );
+  }
+}
+
+.box2:after {
+  animation-delay: -5s;
+  background-color: #93e1d8;
+  opacity: 0.5;
+  clip-path: polygon(
+    0 0,
+    calc(100% - (33.3333333333px)) calc(0% + (33.3333333333px)),
+    100% 100%,
+    calc(0% + (33.3333333333px)) calc(100% - (33.3333333333px))
+  );
+}
+.box2:before {
+  background-color: #aa4465;
+  opacity: 0.5;
+  clip-path: polygon(
+    calc(0% + (33.3333333333px)) calc(0% + (33.3333333333px)),
+    100% 0,
+    calc(100% - (33.3333333333px)) calc(100% - (33.3333333333px)),
+    0 100%
+  );
+}
+
+.box-active:after {
+  animation-delay: -5s;
+  background-color: #93e1d8;
+  clip-path: polygon(
+    0 0,
+    calc(100% - (33.3333333333px)) calc(0% + (33.3333333333px)),
+    100% 100%,
+    calc(0% + (33.3333333333px)) calc(100% - (33.3333333333px))
+  );
+}
+.box-active:before {
+  background-color: #aa4465;
+  clip-path: polygon(
+    calc(0% + (33.3333333333px)) calc(0% + (33.3333333333px)),
+    100% 0,
+    calc(100% - (33.3333333333px)) calc(100% - (33.3333333333px)),
+    0 100%
+  );
 }
